# NeuralNetworks

./: .gitattributes  .gitignore  Pipfile  README.md  game_detection.py  language_detection.py  language_detection_2.py  predict.py  pyproject.toml
models/: fortnite.h5  leagueoflegends.h5
src/: game_detection.py  predict.py  video2images.py
