[tool.poetry]
name = "neuralnetworks"
version = "0.1.0"
description = ""
authors = ["Christian Coenen <coenen.christian@outlook.com>"]

[tool.poetry.dependencies]
python = "~=3.8"
tensorflow = "~=2.4"
Pillow = "~=7.2"
moviepy = "~=1.0"
scipy = "~=1.6"
opencv-python = "~=4.5"

[tool.poetry.dev-dependencies]
black = "~=20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''