[tool.poetry]
name = "neuralnetworks"
version = "1.0"
description = "Implementation of a Neural Network that can detect whether a video is in-game or not"
authors = ["Christian C., Moritz M., Luca S."]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "~2.11"
Pillow = "~9.3"
moviepy = "~1.0"
scipy = "~1.9"
opencv-python = "~4.5"

[tool.poetry.dev-dependencies]
black = "~22.12"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
